# mapreduce-rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
coordinator/: Cargo.toml
coordinator/src/: config.rs  coordinator_state.rs  heartbeat.rs  lib.rs  main.rs  server.rs
coordinator/src/apis/: heartbeat.rs  mod.rs  registration.rs
coordinator/src/mapper/: coordinator_mapper.rs  mod.rs  task_info.rs
proto/: Cargo.toml  build.rs  heartbeat.proto  mapper.proto  registration.proto
proto/src/: lib.rs
worker/: Cargo.toml
worker/src/: config.rs  heartbeat.rs  lib.rs  main.rs  registration.rs
